# PR-ComfyUI-Hunyuan3D-1-wrapper-1feefef0

./: README.md  README_zh_CN.md  pyproject.toml  run.py
infer/: image_to_views.py  image_to_views_pipeline_load.py  text_to_image.py  text_to_image_pipeline_load.py  views_to_mesh.py  views_to_mesh_pipeline_load.py
svrm/: predictor.py
workflow/: example-image2mesh.json  example-text2mesh-native.json  example-text2mesh.json
